--- a/.github/workflows/fluttercheck.yml
+++ b/.github/workflows/fluttercheck.yml
@@ -1,12 +1,6 @@
 name: Flutter check
 on:
-  push:
-    branches:
-      - main
-  pull_request:
-    paths:
-      - '.github/workflows/fluttercheck.yml'
-      - '**.dart'
+  workflow_dispatch: # Manual trigger only
 jobs:
   flutterfmt:
     name: Run flutter format
@@ -15,7 +9,7 @@ jobs:
       - name: Install flutter
         uses: subosito/flutter-action@f2c4f6686ca8e8d6e6d0f28410eeef506ed66aff #v2.18.0
         with:
-          flutter-version: '3.29.2'
+          flutter-version: "3.29.2"
 
       - name: Check out code
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 #4.2.2
@@ -31,7 +25,7 @@ jobs:
       - name: Install flutter
         uses: subosito/flutter-action@f2c4f6686ca8e8d6e6d0f28410eeef506ed66aff #v2.18.0
         with:
-          flutter-version: '3.29.2'
+          flutter-version: "3.29.2"
 
       - name: Check out code
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 #4.2.2
