--- a/.github/workflows/gofmt.yml
+++ b/.github/workflows/gofmt.yml
@@ -1,15 +1,7 @@
 name: gofmt
 on:
-  push:
-    branches:
-      - main
-  pull_request:
-    paths:
-      - '.github/workflows/gofmt.yml'
-      - '.github/workflows/gofmt.sh'
-      - '**.go'
+  workflow_dispatch: # Manual trigger only
 jobs:
-
   gofmt:
     name: Run gofmt
     runs-on: ubuntu-latest
@@ -22,7 +14,7 @@ jobs:
       - name: Set up Go 1.22
         uses: actions/setup-go@f111f3307d8850f501ac008e886eec1fd1932a34 #5.3.0
         with:
-          go-version: '1.22'
+          go-version: "1.22"
           cache-dependency-path: nebula/go.sum
 
       - name: Install goimports
