--- a/.github/workflows/smoke.yml
+++ b/.github/workflows/smoke.yml
@@ -2,11 +2,7 @@
 
 name: Smoke build
 on:
-  push:
-    branches:
-      - main
-  pull_request:
-    types: [opened, synchronize, labeled, reopened]
+  workflow_dispatch: # Manual trigger only
 
 jobs:
   build-android:
@@ -22,17 +18,17 @@ jobs:
       - name: Patch Go
         uses: DefinedNet/patch-go@c8e4a17c75eb242d34c212419d7d3d25e8d58949
         with:
-          patch-ref: '296be05a97eb526dc0e438b7387670d4cae4a935'
+          patch-ref: "296be05a97eb526dc0e438b7387670d4cae4a935"
 
       - uses: actions/setup-java@3a4f6e1af504cf6a31855fa899c6aa5355ba6c12 #v4.7.0
         with:
-          distribution: 'zulu'
-          java-version: '17'
+          distribution: "zulu"
+          java-version: "17"
 
       - name: Install flutter
         uses: subosito/flutter-action@f2c4f6686ca8e8d6e6d0f28410eeef506ed66aff #v2.18.0
         with:
-          flutter-version: '3.29.2'
+          flutter-version: "3.29.2"
 
       - name: install dependencies
         env:
@@ -102,12 +98,12 @@ jobs:
       - name: Patch Go
         uses: DefinedNet/patch-go@c8e4a17c75eb242d34c212419d7d3d25e8d58949
         with:
-          patch-ref: '296be05a97eb526dc0e438b7387670d4cae4a935'
+          patch-ref: "296be05a97eb526dc0e438b7387670d4cae4a935"
 
       - name: Install flutter
         uses: subosito/flutter-action@f2c4f6686ca8e8d6e6d0f28410eeef506ed66aff #v2.18.0
         with:
-          flutter-version: '3.29.2'
+          flutter-version: "3.29.2"
 
       - name: install dependencies
         run: |
