--- a/.github/workflows/swiftfmt.yml
+++ b/.github/workflows/swiftfmt.yml
@@ -1,12 +1,6 @@
 name: Swift format
 on:
-  push:
-    branches:
-      - main
-  pull_request:
-    paths:
-      - ".github/workflows/swiftfmt.yml"
-      - "**.swift"
+  workflow_dispatch: # Manual trigger only
 jobs:
   swiftfmt:
     name: Run swift format
